fix word struct